--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html> 
 <head> 
-<meta http-equiv="Content-Language" content="zh-CN"> 
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8"> 
+<meta http-equiv="Content-Language" content="zh-CN">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+<link rel="icon" type="image/x-icon" href="https://gitee.com/dreamvoid/MineBlock/raw/master/favicon.ico" />
 <title>MineBlock 在线商店</title> 
 </head> 
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
