--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
 <frame name="main" src="https://vexrmb.kukeidc.cn/index.php/serverpay/index/id/2612.html" scrolling="auto" noresize> 
 </frameset> 
+<body>
+  <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1279565675&web_id=1279565675"></script>
+  </body>
 </html>
