--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>MineBlock 在线商店</title> 
 </head> 
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="https://vexrmb.kukeidc.cn/index.php/serverpay/index/id/2612.html" scrolling="auto" noresize> 
+<frame name="main" src="http://mineblock.mcrmb.com/" scrolling="auto" noresize> 
 </frameset> 
 <body>
   <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1279565675&web_id=1279565675"></script>
