--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <head> 
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<link rel="icon" type="image/x-icon" href="https://flyingteam.gitee.io/mineblock/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="https://mineblock.gitee.io/favicon.ico" />
 <title>MineBlock 在线商店</title> 
 </head> 
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="https://mcrmb.mineblock.cc/" scrolling="auto" noresize> 
+<frame name="main" src="https://www.mcrmb.com/?domain=mcrmb.mineblock.cc" scrolling="auto" noresize> 
 </frameset> 
-<body>
-  <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1279565675&web_id=1279565675"></script>
-  </body>
 </html>
