--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html> 
-<head> 
-<meta http-equiv="Content-Language" content="zh-CN">
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-<link rel="icon" type="image/x-icon" href="https://mineblock.gitee.io/favicon.ico" />
-<title>MineBlock 在线商店</title> 
+  <head> 
+    <meta http-equiv="Content-Language" content="zh-CN">
+    <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+    <meta http-equiv="Refresh" content="0; URL=https://example.com/">
+    <link rel="icon" type="image/x-icon" href="https://mineblock.mcrmb.com/" />
+    <title>MineBlock 在线商店</title> 
 </head> 
-<frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="https://www.mcrmb.com/?domain=mcrmb.mineblock.cc" scrolling="auto" noresize> 
-</frameset> 
 </html>
