--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head> 
     <meta http-equiv="Content-Language" content="zh-CN">
     <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-    <meta http-equiv="Refresh" content="0; URL=https://example.com/">
-    <link rel="icon" type="image/x-icon" href="https://mineblock.mcrmb.com/" />
+    <meta http-equiv="Refresh" content="0; URL=https://mineblock.mcrmb.com/">
+    <link rel="icon" type="image/x-icon" href="https://mineblock.gitee.io/favicon.ico" />
     <title>MineBlock 在线商店</title> 
   </head> 
 </html>
